syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.arth.sakimq.protocol";
option java_outer_classname = "SakiMQMassage";

// MQ message
message Message {
  int64 message_id = 1;
  map<string, string> headers = 2;
  bytes body = 3;
  int64 timestamp = 4;
  string client_id = 5;
  int64 sequence_number = 6;
}

// Message Pack
message MessagePack {
  repeated string topics = 1;
  Message message = 2;
}